--- a/vc141/WindowsXP.props
+++ b/vc141/WindowsXP.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<ItemDefinitionGroup Condition="'$(Platform)'=='Win32'">
 		<ClCompile>
-			<PreprocessorDefinitions>_WIN32_WINNT=0x0501;_ATL_XP_TARGETING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+			<PreprocessorDefinitions>_ATL_XP_TARGETING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
 			<AdditionalOptions>/Zc:threadSafeInit- %(AdditionalOptions)</AdditionalOptions>
 		</ClCompile>
 		<Link>
